--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Encryption Page</title>
     <script src="./notes.js"></script>
     <script>
+        const app = express();
+
+        app.use((req, res, next) => {
+          res.header('Cross-Origin-Opener-Policy', 'same-origin');
+          res.header('Cross-Origin-Embedder-Policy', 'require-corp');
+          next();
+        });
         
         var Module = {
           onRuntimeInitialized: function() {
