--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>Encryption Page</title>
 
     <script>
-        var the_headers = new Headers();
+        // var the_headers = new Headers();
 
-        // the_headers.append('Cross-Origin-Opener-Policy', 'same-origin');
-        // the_headers.append('Cross-Origin-Embedder-Policy', 'require-corp');
-        the_headers.set('Cross-Origin-Opener-Policy', 'same-origin');
-        the_headers.set('Cross-Origin-Embedder-Policy', 'require-corp');
+        // // the_headers.append('Cross-Origin-Opener-Policy', 'same-origin');
+        // // the_headers.append('Cross-Origin-Embedder-Policy', 'require-corp');
+        // the_headers.set('Cross-Origin-Opener-Policy', 'same-origin');
+        // the_headers.set('Cross-Origin-Embedder-Policy', 'require-corp');
     </script>
 
     <script src="./notes.js"></script>
