--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
     <meta charset="utf-8">
     <!-- <link rel='stylesheet' href='../style.css'  type="text/css" > -->
     <title>Encryption Page</title>
-    <script src="./js/jquery-3.6.0.min.js"></script>
-    <script src="./jquery-ui-1.13.0/jquery-ui.min.js"></script>
+    <script src="./js/js/jquery-3.6.0.min.js"></script>
+    <script src="./js/jquery-ui-1.13.0/jquery-ui.min.js"></script>
     <link rel="stylesheet" href="./jquery-ui-1.13.0/jquery-ui.css">
-    <script>
-        if (!crossOriginIsolated) SharedArrayBuffer = ArrayBuffer;
-    </script>
+    
 
     <script src="./notes.js"></script>
     
