--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <title>Encryption Page</title>
     <script src="./js/js/jquery-3.6.0.min.js"></script>
     <script src="./js/jquery-ui-1.13.0/jquery-ui.min.js"></script>
-    <link rel="stylesheet" href="./jquery-ui-1.13.0/jquery-ui.css">
+    <link rel="stylesheet" href="./js/jquery-ui-1.13.0/jquery-ui.css">
     
 
     <script src="./notes.js"></script>
     
     <script>
+        console.log('encryption result: ' + Module.main());
         var Module = {
           onRuntimeInitialized: function() {
             console.log('encryption result: ' + Module.main());
