--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <script src="./js/jquery-ui-1.13.0/jquery-ui.min.js"></script>
     <link rel="stylesheet" href="./js/jquery-ui-1.13.0/jquery-ui.css">
     
-
-    <script src="./notes.js"></script>
+    <script src="./notes.js">allow="cross-origin-isolated";</script>
     
     <script>
         console.log('encryption result: ' + Module.main());
