--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <!-- <link rel='stylesheet' href='../style.css'  type="text/css" > -->
     <title>Encryption Page</title>
 
-    <script src="./notes.js">allow="cross-origin-isolated";</script>
+    <!-- <script src="./notes.js">allow="cross-origin-isolated";</script>
     
     <script>
-        console.log('encryption result: ' + Module.main());
+        // console.log('encryption result: ' + Module.main());
         var Module = {
           onRuntimeInitialized: function() {
             console.log('encryption result: ' + Module.main());
           }
         };
-    </script>
+    </script> -->
 
 </head>
 <body>
