--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- <link rel='stylesheet' href='../style.css'  type="text/css" > -->
     <title>Encryption Page</title>
 
-    <!-- <script src="./notes.js">allow="cross-origin-isolated";</script>
+    <script src="./notes.js">allow="cross-origin-isolated";</script>
     
     <script>
         // console.log('encryption result: ' + Module.main());
@@ -15,7 +15,7 @@
             console.log('encryption result: ' + Module.main());
           }
         };
-    </script> -->
+    </script>
 
 </head>
 <body>
