--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     
-    <meta charset="utf-8">
+    <!-- <meta charset="utf-8"> -->
     <!-- <link rel='stylesheet' href='../style.css'  type="text/css" > -->
     <title>Encryption Page</title>
 
-    <script src="./notes.js">allow="cross-origin-isolated";</script>
+    <script src="./notes.js"></script>
     
     <script>
         // console.log('encryption result: ' + Module.main());
