--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
         var Module = {
           onRuntimeInitialized: function() {
             console.log('encryption result: ' + Module.main());
-            Module.loader_check();
+            console.log('encryption result: ' + Module.loader_check());
+            
             let inputVal = "this is not a secret, but.";
             let text_key = "1234";
             var input_t = Array.from(inputVal);
@@ -43,7 +44,7 @@
             var outstr_dec = new Array((inputVal.length)*"");
             Module.cmd_enc(input_t,inputVal.length,outstr,text_key);
             Module.cmd_enc(outstr,inputVal.length+12,outstr_dec,text_key);
-            $("#output1").append(outstr_dec.toString());
+            $("#output1").append(Module.loader_check());
           }
         };
     </script>
