--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="./js/js/jquery-3.6.0.min.js"></script>
     <script src="./js/jquery-ui-1.13.0/jquery-ui.min.js"></script>
     <link rel="stylesheet" href="./js/jquery-ui-1.13.0/jquery-ui.css">
-    <script src="./notes.js"></script>
+    <script src="./build/notes.js"></script>
     <script>
         
         $( document ).ready(function() {
@@ -36,7 +36,7 @@
           onRuntimeInitialized: function() {
             console.log('encryption result: ' + Module.main());
             console.log('encryption result: ' + Module.loader_check());
-            
+
             let inputVal = "this is not a secret, but.";
             let text_key = "1234";
             var input_t = Array.from(inputVal);
