--- a/index.html
+++ b/index.html
@@ -35,18 +35,23 @@
         var Module = {
           onRuntimeInitialized: function() {
             console.log('encryption result: ' + Module.main());
-            console.log('encryption result: ' + Module.loader_check());
+            // console.log('encryption result: ' + Module.loader_check());
 
+            var enc = new Module.Cc20();
             let inputVal = "this is not a secret, but.";
             let text_key = "1234";
             var input_t = Array.from(inputVal);
             var outstr = new Array((inputVal.length+13)*"");
             var outstr_dec = new Array((inputVal.length)*"");
-            Module.cmd_enc(input_t,inputVal.length,outstr,text_key);
-            Module.cmd_enc(outstr,inputVal.length+12,outstr_dec,text_key);
+            enc.cmd_enc(input_t,inputVal.length,outstr,text_key);
+            enc.cmd_enc(outstr,inputVal.length+12,outstr_dec,text_key);
             $("#output1").append(Module.loader_check());
+            enc.delete();
           }
         };
+
+
+
     </script>
    
 
