--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         });
         var Module = {
           onRuntimeInitialized: function() {
+            Module.main();
             var vec = new Module.CharList("this is not a secret, but.");
 
 
