--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 
         });
-        var Module = {
+        var Module1 = {
           onRuntimeInitialized: function() {
             Module.main();
             var vec = new Module.CharList("this is not a secret, but.");
