--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         });
         Module.onRuntimeInitialized= function() {
             
-            var vec = new Module.CharList("this is not a secret, but.");
+            var vec = new Module.CharList();
 
 
 
