--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             let inputVal = "this is not a secret, but.";
             let text_key = "1234";
             for (let character of inputVal) {
-              vec.push_back(character);
+              vec.push_back((unsigned char)character);
             }
             var enc = new Module.Cc20();
 
