--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 }
                 var enc = new Module.Cc20();
 
-                console.log( Module.use_vector_string(vec));
+                Console.log( Module.use_vector_string(vec));
 
 
                 var input_t = Array.from(inputVal);
@@ -39,7 +39,7 @@
                 enc.delete();
                 vec.delete();
             }
-            
+
             var data = new FormData();
             data.append('listings','files list');
             
