--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 let inputVal = "this is not a secret, but.";
                 let text_key = "1234";
                 for (let character of inputVal) {
-                  vec.push_back((unsigned char)character);
+                  vec.push_back(character);
                 }
                 var enc = new Module.Cc20();
 
