--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="./js/jquery-ui-1.13.0/jquery-ui.min.js"></script>
     <link rel="stylesheet" href="./js/jquery-ui-1.13.0/jquery-ui.css">
     <script src="./build/notes.js"></script>
-    <script src="./js/main.js"></script>
+    <script src="./js/src/main.js"></script>
    
 
 </head>
