--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="./js/js/jquery-3.6.0.min.js"></script>
     <script src="./js/jquery-ui-1.13.0/jquery-ui.min.js"></script>
     <link rel="stylesheet" href="./js/jquery-ui-1.13.0/jquery-ui.css">
-    <!-- <script src="./build/notes.js"></script> -->
+    <script src="./build/notes.js"></script>
     <script src="./js/src/main.js"></script>
    
 
