--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     
     <!-- <meta charset="utf-8"> -->
-    <link rel='stylesheet' href='../style.css'  type="text/css" >
+    <link rel='stylesheet' href='./style.css'  type="text/css" >
 
     <title>Encryption Page</title>
-    <link rel='stylesheet' href='../style.css' type="text/css">
+    <!-- <link rel='stylesheet' href='../style.css' type="text/css"> -->
     <script src="./js/js/jquery-3.6.0.min.js"></script>
     <script src="./js/jquery-ui-1.13.0/jquery-ui.min.js"></script>
     <link rel="stylesheet" href="./js/jquery-ui-1.13.0/jquery-ui.css">
