--- a/index.html
+++ b/index.html
@@ -18,13 +18,27 @@
 <body>
 <!--    <button>HTTP POST request </button>-->
     <h2>
-    Encryption
+    文字传输
     </h2>
-    <input type="text" placeholder="password " id="input1" class="inputClass1">
-    <input type="text" placeholder="Type " id="input2" class="inputClass2">
-    <button type="button" id="button1" >Get Value</button>
-    <p id=output1></p>
-
+    <main>
+      <input type="text" placeholder="密码 " id="input1" class="inputClass1">
+      <input type="text" placeholder="用户名 " id="input3" class="inputClass3">
+      <button type="button" class="warn" id="button1">确定</button>
+      <p id=output1></p>
+    <section>
+      <h2></h2>
+      <div class="row">
+        <div id="output" class="terminal" id="terminal"></div>
+      </div>
+      <div class="row">
+      <input type="text" placeholder=" " id="input2" class="inputClass2">
+        <!-- <input type="text" class="smooth" id="input" value="help"> -->
+        <button class="primary" id="send">发送</button>
+        <!-- <button class="warn" id="clear">clear</button> -->
+        <!-- <button class="white" id="reconnect">reconnect</button> -->
+      </div>
+    </section>
+    </main>
 </body>
     
 <footer>
