--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section>
       <h2></h2>
       <div class="row">
-        <div id="output" class="terminal" id="terminal"></div>
+        <div id="output" class="terminal" ></div>
       </div>
       <div class="row">
       <input type="text" placeholder=" " id="input2" class="inputClass2">
