--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     文字传输
     </h2>
     <main>
-      <input type="text" placeholder="密码 " id="input1" class="inputClass1">
+      <input type="password" placeholder="密码 " id="input1" class="inputClass1">
       <input type="text" placeholder="用户名 " id="input3" class="inputClass3">
       <button type="button" class="warn" id="button1">确定</button>
       <p id=output1></p>
