--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
 </head>
 <body>
 <!--    <button>HTTP POST request </button>-->
+<div id="dialog-form" title="Create new user">
+
+    <fieldset>
+      <legend>显示 </legend>
+      <label for="radio-1">SHA3</label>
+      <input type="checkbox" name="radio-1" id="radio-1">
+      <label for="radio-2">密文</label>
+      <input type="checkbox" name="radio-1" id="radio-2">
+    </fieldset>
+</div>
     <h2>
     文字传输
     </h2>
@@ -34,6 +44,7 @@
       <input type="text" placeholder=" " id="input2" class="inputClass2">
         <!-- <input type="text" class="smooth" id="input" value="help"> -->
         <button class="primary" id="send">发送</button>
+        <button class="white" id="settings">设定</button>
         <!-- <button class="warn" id="clear">clear</button> -->
         <!-- <button class="white" id="reconnect">reconnect</button> -->
       </div>
