--- a/index.html
+++ b/index.html
@@ -17,16 +17,7 @@
 </head>
 <body>
 <!--    <button>HTTP POST request </button>-->
-<div id="dialog-form" title="Create new user">
 
-    <fieldset>
-      <legend>显示 </legend>
-      <label for="radio-1">SHA3</label>
-      <input type="checkbox" name="radio-1" id="radio-1">
-      <label for="radio-2">密文</label>
-      <input type="checkbox" name="radio-1" id="radio-2">
-    </fieldset>
-</div>
     <h2>
     文字传输
     </h2>
@@ -43,10 +34,13 @@
       <div class="row">
       <input type="text" placeholder=" " id="input2" class="inputClass2">
         <!-- <input type="text" class="smooth" id="input" value="help"> -->
-        <button class="primary" id="send">发送</button>
-        <button class="white" id="settings">设定</button>
+        
         <!-- <button class="warn" id="clear">clear</button> -->
         <!-- <button class="white" id="reconnect">reconnect</button> -->
+      </div>
+      <div class="row">
+        <button class="primary" id="send">发送</button>
+        <button class="white" id="settings">设定</button>
       </div>
     </section>
     </main>
