--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div id="output" class="terminal" ></div>
       </div>
       <div class="row">
-      <input type="text" placeholder=" " id="input2" class="inputClass2">
+      <textarea placeholder=" " id="input2" class="inputClass2"></textarea>
         <!-- <input type="text" class="smooth" id="input" value="help"> -->
         
         <!-- <button class="warn" id="clear">clear</button> -->
