--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- <link rel='stylesheet' href='../style.css' type="text/css"> -->
     <script src="./js/js/jquery-3.6.0.min.js"></script>
     <script src="./js/jquery-ui-1.13.0/jquery-ui.min.js"></script>
-    <link rel="stylesheet" href="./js/jquery-ui-1.13.0/jquery-ui.css">
+    <!-- <link rel="stylesheet" href="./js/jquery-ui-1.13.0/jquery-ui.css"> -->
     <script src="./js/src/main.js"></script>
     <script src="./build/notes.js"></script>
    
