--- a/index.html
+++ b/index.html
@@ -12,7 +12,19 @@
     <!-- <link rel="stylesheet" href="./js/jquery-ui-1.13.0/jquery-ui.css"> -->
     <script src="./js/src/main.js"></script>
     <script src="./build/notes.js"></script>
-   
+  <style>
+    .inputClass2 {
+	/* width: 60em;      
+	word-wrap: break-word; */  
+	max-height: 7vh;
+	border-radius: 5px;     
+	resize: none; 
+	word-wrap: break-word;      
+}
+.inputClass2:focus {
+    outline: none;
+}
+  </style>
 
 </head>
 <body>
