--- a/test.html
+++ b/test.html
@@ -28,15 +28,25 @@
   <h2>
     文字传输
   </h2>
-  <div class="container">
-    <div class="my-5 jumbotron">
-      <h1 class="mb-3 display-4">Send Message</h1>
-      <input id="name" class="mb-3 form-control" placeholder="Name" />
-      <textarea id="message" class="mb-3 form-control" placeholder="Message"></textarea>
-      <button id="send" class="btn btn-success">Send</button>
-    </div>
-    <div id="messages"></div>
-  </div>
+  <main>
+    <input type="password" placeholder="密码 " id="input1" class="inputClass1">
+    <input type="text" placeholder="用户名 " id="input3" class="inputClass3">
+    <button type="button" class="warn" id="button1">确定</button>
+    <p id=output1></p>
+    <section>
+      <h2></h2>
+      <div class="row">
+        <div id="output" class="terminal"></div>
+      </div>
+      <div class="row">
+        <textarea placeholder=" " id="input2" class="inputClass2"></textarea>
+      </div>
+      <div class="row">
+        <button class="primary" id="send">发送</button>
+        <button class="white" id="settings">设定</button>
+      </div>
+    </section>
+  </main>
 </body>
 
 <footer>
