--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       <div class="row">
         <button class="primary" id="send">发送</button>
         <button class="white" id="settings">设定</button>
+      <input type="text" placeholder="用户名2 " id="input3" class="inputClass4">
       </div>
     </section>
     </main>
