--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </h2>
     <main>
       <input type="password" placeholder="密码 " id="input1" class="inputClass1">
-      <input type="text" placeholder="用户名 " id="input3" class="inputClass3">
+      <input type="text" placeholder="用户名 " id="username" class="inputClass3">
       <button type="button" class="warn" id="button1">确定</button>
       <p id=output1></p>
     <section>
@@ -43,12 +43,12 @@
         <div id="output" class="terminal" ></div>
       </div>
       <div class="row">
-        <textarea placeholder=" " id="input2" class="inputClass2"></textarea>
+        <textarea placeholder=" " id="msginput" class="inputClass2"></textarea>
       </div>
       <div class="row">
         <button class="primary" id="send">发送</button>
         <button class="white" id="settings">设定</button>
-      <input type="text" placeholder="用户名2 " id="input3" class="inputClass4">
+      <input type="text" placeholder="用户名2 " id="username2" class="inputClass4">
       </div>
     </section>
     </main>
