--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <main>
       <input type="password" placeholder="密码 " id="input1" class="inputClass1">
       <input type="text" placeholder="用户名 " id="username" class="inputClass3">
-      <button type="button" class="warn" id="button1">确定</button>
+      <button type="button" class="warn" id="button">确定</button>
       <p id=output1></p>
     <section>
       <h2></h2>
