--- a/static/signup.html
+++ b/static/signup.html
@@ -25,14 +25,17 @@
     <center>
       <br>
       <p>注册pdm账号</p>
+    
+    
+    <form action="https://pdm.pw/auth/register" method="POST">
+    <input type="password" placeholder="密码 " id="input1" class="inputClass1" name="dataname">
     <br>
-    <input type="password" placeholder="密码 " id="input1" class="inputClass1">
+    <input type="text" placeholder="用户名 " id="input3" class="inputClass3" name="datavalue">
     <br>
-    <input type="text" placeholder="用户名 " id="input3" class="inputClass3">
+    <input type="text" placeholder="邮箱 " id="input4" class="inputClass3" name="datavalue">
     <br>
-    <input type="text" placeholder="邮箱 " id="input4" class="inputClass3">
-    <br>
-    <button type="button" class="warn" id="button1">确定</button>
+    <button type="submit" class="warn" id="button1">确定</button>
+    </form>
     </center>
    
   </main>
