--- a/static/signup.html
+++ b/static/signup.html
@@ -28,11 +28,11 @@
     
     
     <form action="https://pdm.pw/auth/register" method="POST">
-    <input type="password" placeholder="密码 " id="input1" class="inputClass1" name="dataname">
+    <input type="text" placeholder="用户名 " id="input3" class="inputClass3" name="uname">
     <br>
-    <input type="text" placeholder="用户名 " id="input3" class="inputClass3" name="datavalue">
+    <input type="password" placeholder="密码 " id="input1" class="inputClass1" name="upw">
     <br>
-    <input type="text" placeholder="邮箱 " id="input4" class="inputClass3" name="datavalue">
+    <input type="text" placeholder="邮箱 " id="input4" class="inputClass3" name="umail">
     <br>
     <button type="submit" class="warn" id="button1">确定</button>
     </form>
