added new build

--- a/static/signup.html
+++ b/static/signup.html
@@ -4,7 +4,7 @@
 <head>
 
   <meta charset="utf-8">
-  <link rel='stylesheet' href='./style.css' type="text/css">
+  <link rel='stylesheet' href='../style.css' type="text/css">
   <title>Encryption Page</title>
   <script src="./js/js/jquery-3.6.0.min.js"></script>
   <script src="./js/socket.io/socket.io.js"></script>
