new network overhaul

--- a/static/signup.html
+++ b/static/signup.html
@@ -27,12 +27,12 @@
       <p>注册pdm账号</p>
     
     
-    <form action="https://pdm.pw/auth/register" method="POST">
+    <form action="https://pdm.pw/auth/register" method="POST" class="user-form">
     <input type="text" placeholder="用户名 " id="input3" class="inputClass3" name="uname">
     <br>
-    <input type="password" placeholder="密码 " id="input1" class="inputClass1" name="upw">
-    <br>
     <input type="text" placeholder="邮箱 " id="input4" class="inputClass3" name="umail">
+    <br>
+    <input type="password" placeholder="密码 " id="input1" class="inputClass1" name="upw">
     <br>
     <button type="submit" class="warn" id="button1">确定</button>
     </form>
